--- a/osa2/puhelinluettelo/package.json
+++ b/osa2/puhelinluettelo/package.json
@@ -14,13 +14,18 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@parcel/optimizer-cssnano": "^2.0.0-nightly.610",
     "@parcel/optimizer-htmlnano": "^2.0.0-nightly.610",
+    "@parcel/packager-css": "^2.0.0-nightly.610",
     "@parcel/packager-html": "^2.0.0-nightly.610",
+    "@parcel/transformer-css": "^2.0.0-nightly.610",
     "@parcel/transformer-html": "^2.0.0-nightly.610",
+    "@parcel/transformer-postcss": "^2.0.0-nightly.610",
     "@parcel/transformer-posthtml": "^2.0.0-nightly.610",
     "babel-preset-nano-react-app": "^0.1.0",
     "json-server": "^0.16.3",
-    "parcel": "^2.0.0-alpha.3.2"
+    "parcel": "^2.0.0-alpha.3.2",
+    "postcss": "^8.2.10"
   },
   "babel": {
     "presets": [
