Add launch via NPM

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,20 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
+            "envFile": "${workspaceFolder}/osa3/.env",
             "program": "${workspaceFolder}/osa3/index.js"
+        },
+        {
+            "name": "Launch via NPM",
+            "request": "launch",
+            "runtimeArgs": [
+                "start"
+            ],
+            "runtimeExecutable": "npm",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node"
         }
     ]
 }
